--- a/src/CSharp/CodeCracker/CodeCracker.csproj
+++ b/src/CSharp/CodeCracker/CodeCracker.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Refactoring\AllowMembersOrderingAnalyzer.cs" />
     <Compile Include="Refactoring\AllowMembersOrderingCodeFixProvider.StyleCop.cs" />
     <Compile Include="Refactoring\AllowMembersOrderingCodeFixProvider.Base.cs" />
+    <Compile Include="Refactoring\ConvertMethodToPropertyAnalyzer.cs" />
+    <Compile Include="Refactoring\ConvertMethodToPropertyCodeFixProvider.cs" />
     <Compile Include="Refactoring\MakeMethodNonAsyncCodeFixProvider.cs" />
     <Compile Include="Refactoring\MergeNestedIfAnalyzer.cs" />
     <Compile Include="Refactoring\MergeNestedIfCodeFixProvider.cs" />
