--- a/test/CSharp/CodeCracker.Test/CodeCracker.Test.csproj
+++ b/test/CSharp/CodeCracker.Test/CodeCracker.Test.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Refactoring\AllowMembersOrderingAnalyzerTests.cs" />
     <Compile Include="Refactoring\AllowMembersOrderingCodeFixProviderTests.Base.cs" />
     <Compile Include="Refactoring\ChangeAnyToAllTests.cs" />
+    <Compile Include="Refactoring\ConvertMethodToPropertyTest.cs" />
     <Compile Include="Refactoring\MakeMethodNonAsyncTests.cs" />
     <Compile Include="Refactoring\MergeNestedIfTest.cs" />
     <Compile Include="Refactoring\IntroduceFieldFromConstructorTest.cs" />
